[gd_scene load_steps=4 format=3 uid="uid://c2rsm4sqqflnk"]

[ext_resource type="Texture2D" uid="uid://b7eklow4kuoga" path="res://assets/bocks.png" id="1_f2x8o"]
[ext_resource type="Script" path="res://scripts/bocks_preview.gd" id="1_q0qf7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cn6yw"]
size = Vector2(126, 126)

[node name="Bocks" type="Node2D"]
script = ExtResource("1_q0qf7")

[node name="BocksSprite" type="Sprite2D" parent="."]
modulate = Color(0.231373, 0.607843, 0.188235, 0.372549)
position = Vector2(-3.8147e-06, -3.8147e-06)
scale = Vector2(8, 8)
texture = ExtResource("1_f2x8o")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_cn6yw")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
